fix: Prevent 'Muscle Mastery' project image from getting clipped on screen resize

--- a/styles.css
+++ b/styles.css
@@ -275,6 +275,14 @@ nav .btn {
     border-top-right-radius: 0.3rem;
 }
 
+.contain {
+    object-fit: contain;
+}
+
+#muscle-mastery {
+    background-color: #60777f;
+}
+
 .project-details {
     padding: 1rem 1rem 4rem;
     display: flex;
